Initial App Style and Click to Complete
Added:
- Initial red color to list
- Grey and strikethrough on tap

This adds some initial style/functionality, no way to generate list
items just yet.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.stephenparish.clear"
+    package="com.clear.app"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -10,8 +10,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".ClearActivity"
-            android:label="@string/app_name" >
+            android:name=".List"
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
